cicd/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: docker.pkg.github.com/warapong-pj/app/app:sha-0f26e70
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry
