cicd/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - name: app
    protocol: TCP
    port: 80
  type: ClusterIP
